--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
         <div id="info-content">
             <h2>HOW TO PLAY</h2>
             <div class="info-section">
-                <h3>⚔️ COMBAT</h3>
+                <h3> COMBAT</h3>
                 <p><strong>SKETCHER</strong> - Precise pistol. Headshots deal 2.5x damage. Infinite ammo.</p>
-                <p style="margin-left: 20px; font-size: 12px;">RIGHT CLICK: Charge ricochet shot (3s) - bounces between 5 enemies/walls</p>
+                <p style="margin-left: 20px; font-size: 12px;">RIGHT CLICK: Charge ricochet shot (3s) - bounces between 5 enemies/walls (WIP!)  </p>
                 <p><strong>ERASER</strong> - Shotgun. Devastating close-range. Massive recoil + force wave.</p>
                 <p style="margin-left: 20px; font-size: 12px;">RIGHT CLICK: Explosive pellet - huge splash damage and knockback</p>
                 <p style="margin-left: 20px; font-size: 12px;">Q KEY: Deploy sticky bomb (5s fuse) - shoot it for early detonation + bonus damage!</p>
@@ -102,20 +102,20 @@
                 <p style="margin-left: 20px; font-size: 12px;">RIGHT CLICK: Overcharge mode - 3x fire rate for 4s, then 6s cooldown</p>
             </div>
             <div class="info-section">
-                <h3>🏃 MOVEMENT</h3>
+                <h3>  MOVEMENT</h3>
                 <p><strong>DASH (SHIFT)</strong> - Quick burst. Banking momentum boosts power!</p>
                 <p><strong>SLIDE (C)</strong> - Fast low slide. Releases banked momentum.</p>
                 <p><strong>AIR DODGE</strong> - Double-tap jump mid-air. 2 charges.</p>
                 <p><strong>SHARP TURNS</strong> - Quick direction changes build momentum.</p>
             </div>
             <div class="info-section">
-                <h3>⚡ MOMENTUM & SMUDGE</h3>
+                <h3> MOMENTUM & SMUDGE</h3>
                 <p><strong>MOMENTUM</strong> - Builds from speed. Release on jumps/dashes for boosts!</p>
                 <p><strong>SMUDGE</strong> - Risk vs reward. High smudge = +50% damage but less accuracy!</p>
                 <p><strong>DASH CANCEL</strong> - Shoot during dash window for +25% damage.</p>
             </div>
             <div class="info-section">
-                <h3>👾 ENEMIES</h3>
+                <h3> ENEMIES</h3>
                 <p><strong>Scribble (Cube)</strong> - Fast chaser. Direct pursuit.</p>
                 <p><strong>Scratch (Sphere)</strong> - Tiny swarmer. Comes in packs. Zig-zag movement.</p>
                 <p><strong>Blot (Eye)</strong> - Ranged. Maintains distance. Watch for red targeting ring.</p>
@@ -123,7 +123,7 @@
                 <p><strong>Smudge (Bruiser)</strong> - Massive. Devastating damage. Shockwave attack.</p>
             </div>
             <div class="info-section">
-                <h3>💡 TIPS</h3>
+                <h3> TIPS</h3>
                 <p>• Bank momentum by moving fast, release on jumps for 40% boost!</p>
                 <p>• Sharp turns build momentum - zig-zag for power!</p>
                 <p>• Enter smudge state (70%) for damage, exit for accuracy.</p>
@@ -148,6 +148,7 @@
         <h1>SKETCHED OUT</h1>
         <p>Final Score: <span id="final-score">0</span></p>
         <p>Wave Reached: <span id="final-wave">1</span></p>
+        <p id="death-tip" style="font-size: 14px; margin-top: 20px; color: #666; font-style: italic;"></p>
         <button id="restart-button">TRY AGAIN</button>
     </div>
     
